--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div id="main-container" class="container">
         <section class="main-section">
             <h1>Click on the appropriate button</h1>
-            <a href="https://www.google.com/" id="section">Class 1</a>
-            <a href="https://www.google.com/" id="section">Class 2</a>
+            <a href="assets/ExitTickets/3.8ExitTicket-Zamer.pdf" id="section">Class 1</a>
+            <a href="assets/images/sigmund-IKXHeZw2XoY-unsplash.jpg" id="section">Class 2</a>
             <a href="https://www.google.com/" id="section">Class 3</a>
 
         </section>
